20220224-beta1
- Merge Update WriteXMP feature to use pyexiv2 only (#1043) by Baa.
- Merge Adds feature to strip HTML from captions (#1045) by Baa.
- Fix #1047: fix "ffmpegExt" config.
- Fix #1019: add 404 handling for pixiv sketch
- Merge Some optimizations (#1052) by amatuerCoder.
- Implement #1064: add parser for titleCaptionTranslation.
  - Add new filename format %translated_title% for translated title if exists, else it will use original title.
- Implement #1068: add content type filter.
- Merge Fix #1072, #1065 (running in pipe on Unix) (#1082) by dragontamer8740.
- Fix #1084: Fanbox download removes Pixiv files with same ID.
- Implement #1087: FANBOX's url_embed not detected.
- Update logging for #1090: premature download by tags.

20211104
- Fix Issue #1036: update error message for ffmpeg and add option to enable verboseOutput from ffmpeg.
  - remove `-lossless 1` from webm param due to ffmpeg memory issue might cause ugoira not fully converted.
  - remove logging from ffmpeg output due to conflict with logger
- Update ffmpeg detection to return warning if ffmpeg return exit code != 0 when loading for the first time.
- Update default encoding parameter for webm and webp
  - ffmpegParam = -row-mt 1 -deadline good -crf 20 -vsync 2 -r 999 -pix_fmt yuv420p
  - webpParam = -row-mt 1 -lossless 0 -q:v 90 -loop 0 -vsync 2 -r 999

20211030
- Fix Issue #1035: enhance error detection when converting ugoira.
- Fix Issue #1031 and #1034: fix command line option for 3 and 8

20211020
- Fix Issue #1028: Update download new illust parser to use new API.
- Implement #1027: Add Bookmark Count Option to Option 5, 8.
- Merge Update PixivFanboxHandler.py (#1026) by amatuerCoder.
- Add new option for customCleanUpRe in config.ini.
- Keep case when writing config.ini.
- Update #1004 rewrite pyexiv2 to version 2.7.0.
- Merge fix(deps): demjson (#1015) by BassOfBass.
- Fix #1011: handle user not exists during download.
- Fix check if pixiv sketch return empty post #1013 #1014.