@@ -75,7 +75,7 @@ UTF8_FS = None
 __config__ = PixivConfig.PixivConfig()
 configfile = "config.ini"
 __dbManager__ = None
-__br__ = None
+__br__: PixivBrowserFactory.PixivBrowser = None
 __blacklistTags = list()
 __suppressTags = list()
 __log__ = PixivHelper.get_logger()
